--- a/ECommerceClient/src/app/app.component.html
+++ b/ECommerceClient/src/app/app.component.html
@@ -1,2 +1,8 @@
+<!-- <app-layout></app-layout> -->
+<a routerLink="">Home</a> | <a routerLink="products">Products</a> | <a routerLink="baskets">Baskets</a> | <a routerLink="baskets">Baskets</a> | <a routerLink="admin">Admin</a>
 
-<app-layout></app-layout>
+<br>
+<router-outlet></router-outlet>
+
+
+
