--- a/ECommerceClient/src/app/admin/components/products/list/list.component.html
+++ b/ECommerceClient/src/app/admin/components/products/list/list.component.html
@@ -38,7 +38,11 @@
 
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef width="30">  </th>
-      <td [id]="element.id" mat-cell *matCellDef="let element" appDelete (callbackForDirective)="getProducts()">
+      <td mat-cell *matCellDef="let element"
+        appDelete
+        [id]="element.id"
+        (callbackForDirective)="getProducts()"
+        controller="products">
         <!-- <img src="../../../../../assets/delete.png" width="25" height="25" (click)="delete(element.id, $event)" /> -->
       </td>
     </ng-container>
