--- a/ECommerceClient/src/app/admin/components/products/create/create.component.html
+++ b/ECommerceClient/src/app/admin/components/products/create/create.component.html
@@ -12,3 +12,8 @@
 </mat-form-field>
 
 <button mat-raised-button color="primary" class="button" (click)="create(txtName, txtStock, txtPrice)">Create Product</button>
+
+<hr />
+
+<!-- parent to child -->
+<app-file-upload [options]="fileUploadOptions"></app-file-upload>
