Centralized the dialogs of components

--- a/ECommerceClient/src/app/dialogs/file-upload-dialog/file-upload-dialog.component.html
+++ b/ECommerceClient/src/app/dialogs/file-upload-dialog/file-upload-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Delete</h1>
 <div mat-dialog-content>
-  <p>Are you sure to delete the record?</p>
+  <p>Are you sure to load the file(s)?</p>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="close()">Cancel</button>
