--- a/ECommerceClient/src/app/admin/components/products/list/list.component.html
+++ b/ECommerceClient/src/app/admin/components/products/list/list.component.html
@@ -29,19 +29,24 @@
       <td mat-cell *matCellDef="let element"> {{element.updatedDate}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef width="30">  </th>
+    <ng-container matColumnDef="photos">
+      <th mat-header-cell *matHeaderCellDef width="30"> </th>
       <td mat-cell *matCellDef="let element">
-        <img src="../../../../../assets/edit.png" width="25" height="25"/>
+        <img style="cursor: pointer;" src="../../../../../assets/savefile.png" width="25" height="25"
+          (click)="addProductImages(element.id)" />
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef width="30"> </th>
+      <td mat-cell *matCellDef="let element">
+        <img style="cursor: pointer;" src="../../../../../assets/edit.png" width="25" height="25" />
       </td>
     </ng-container>
 
     <ng-container matColumnDef="delete">
-      <th mat-header-cell *matHeaderCellDef width="30">  </th>
-      <td mat-cell *matCellDef="let element"
-        appDelete
-        [id]="element.id"
-        (callbackForDirective)="getProducts()"
+      <th mat-header-cell *matHeaderCellDef width="30"> </th>
+      <td mat-cell *matCellDef="let element" appDelete [id]="element.id" (callbackForDirective)="getProducts()"
         controller="products">
         <!-- <img src="../../../../../assets/delete.png" width="25" height="25" (click)="delete(element.id, $event)" /> -->
       </td>
@@ -51,9 +56,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator (page)="pageChange()"
-                 [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons
-                 aria-label="Select page of periodic elements">
+  <mat-paginator (page)="pageChange()" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+    aria-label="Select page of periodic elements">
   </mat-paginator>
 </div>
