--- a/ECommerceClient/src/app/app.component.html
+++ b/ECommerceClient/src/app/app.component.html
@@ -17,6 +17,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="baskets">Baskets</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="register">Register</a>
+          </li>
           <li>
             <a routerLink="admin" class="btn btn-outline-success" type="submit">Admin Panel</a>
           </li>
