--- a/ECommerceClient/src/app/ui/components/register/register.component.html
+++ b/ECommerceClient/src/app/ui/components/register/register.component.html
@@ -3,23 +3,62 @@
   <div class="col-md-6">
     <form [formGroup]="frm" (ngSubmit)="onSubmit(frm.value)">
       <div class="form-group">
-        <label for="adSoyad">Name Surname</label>
-        <input type="text" formControlName="adSoyad" class="form-control" id="adSoyad" placeholder="Ad Soyad"
-          [ngClass]="{'is-invalid': submitted && component.adSoyad.errors}">
-        <small class="form-text text-muted invalid-feedback" *ngIf="submitted && component.adSoyad.errors?.required">
+        <label for="nameSurname">Ad Soyad</label>
+        <input type="text" formControlName="nameSurname" class="form-control" id="nameSurname" placeholder="Ad Soyad" [ngClass]="{'is-invalid': submitted && component.nameSurname.errors}">
+        <small class="form-text text-muted invalid-feedback" *ngIf="submitted && component.nameSurname.errors?.required">Lütfen ad soyadı boş geçmeyiniz.</small>
+        <small class="form-text text-muted invalid-feedback" *ngIf="submitted && (component.nameSurname.errors?.maxlength || component.nameSurname.errors?.minlength)">Lütfen ad soyadı 3 ile 50 karakter arasında yazınız.</small>
+      </div>
+      <div class="form-group">
+        <label for="username">Kullanıcı Adı</label>
+        <input type="text" formControlName="username" class="form-control" id="username" [ngClass]="{'is-invalid': submitted && component.username.errors}" placeholder="Kullanıcı Adı">
+        <small class="form-text text-muted invalid-feedback" *ngIf="submitted && component.username.errors?.required">Lütfen kullanıcı adını boş geçmeyiniz.</small>
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" formControlName="email" class="form-control" id="email" placeholder="Email" [ngClass]="{'is-invalid': submitted && component.email.errors}">
+        <small class="form-text text-muted invalid-feedback" *ngIf="submitted && component.email.errors?.required">Lütfen emaili boş geçmeyiniz.</small>
+        <small class="form-text text-muted invalid-feedback" *ngIf="submitted && component.email.errors?.email">Lütfen emaili düzgün giriniz.</small>
+      </div>
+      <div class="form-group">
+        <label for="password">Şifre</label>
+        <input type="password" formControlName="password" class="form-control" id="password" placeholder="Şifre" [ngClass]="{'is-invalid': submitted && component.password.errors}">
+      </div>
+      <div class="form-group">
+        <label for="passwordConfirm">Şifre Tekrar</label>
+        <input type="password" formControlName="passwordConfirm" class="form-control" id="passwordConfirm" placeholder="Şifre Tekrar" [ngClass]="{'is-invalid': submitted && component.passwordConfirm.errors}">
+        <small *ngIf="submitted && frm.hasError('notSame')">Lütfen şifreyi doğrulayınız.</small>
+      </div>
+      <br />
+      <button type="submit" class="btn btn-primary">Kayıt Ol</button>
+    </form>
+
+  </div>
+  <div class="col-md-3"></div>
+</div>
+
+
+<!-- <div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <form [formGroup]="frm" (ngSubmit)="onSubmit(frm.value)">
+      <div class="form-group">
+        <label for="nameSurname">Name Surname</label>
+        <input type="text" formControlName="nameSurname" class="form-control" id="nameSurname" placeholder="Ad Soyad"
+          [ngClass]="{'is-invalid': submitted && component.nameSurname.errors}">
+        <small class="form-text text-muted invalid-feedback" *ngIf="submitted && component.nameSurname.errors?.required">
           Lütfen ad soyadı boş geçmeyiniz.
         </small>
         <small class="form-text text-muted invalid-feedback"
-          *ngIf="submitted && (component.adSoyad.errors?.maxlength || component.adSoyad.errors?.minlength)">
+          *ngIf="submitted && (component.nameSurname.errors?.maxlength || component.nameSurname.errors?.minlength)">
           Lütfen ad soyadı 3 ile 50 karakter arasında yazınız.
         </small>
       </div>
       <div class="form-group">
-        <label for="kullaniciAdi">User name</label>
-        <input type="text" formControlName="kullaniciAdi" class="form-control" id="kullaniciAdi"
-          [ngClass]="{'is-invalid': submitted && component.kullaniciAdi.errors}" placeholder="Kullanıcı Adı">
+        <label for="username">User name</label>
+        <input type="text" formControlName="username" class="form-control" id="username"
+          [ngClass]="{'is-invalid': submitted && component.username.errors}" placeholder="Kullanıcı Adı">
         <small class="form-text text-muted invalid-feedback"
-          *ngIf="submitted && component.kullaniciAdi.errors?.required">
+          *ngIf="submitted && component.username.errors?.required">
           Lütfen kullanıcı adını boş geçmeyiniz.
         </small>
       </div>
@@ -34,13 +73,13 @@
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" formControlName="sifre" class="form-control" id="password" placeholder="Şifre"
-          [ngClass]="{'is-invalid': submitted && component.sifre.errors}">
+        <input type="password" formControlName="password" class="form-control" id="password" placeholder="Şifre"
+          [ngClass]="{'is-invalid': submitted && component.password.errors}">
       </div>
       <div class="form-group">
-        <label for="password">Şifre Tekrar</label>
-        <input type="password" formControlName="sifreTekrar" class="form-control" id="password"
-          placeholder="Şifre Tekrar" [ngClass]="{'is-invalid': submitted && component.sifreTekrar.errors}">
+        <label for="paswordConfirm">Şifre Tekrar</label>
+        <input type="password" formControlName="paswordConfirm" class="form-control" id="paswordConfirm"
+          placeholder="Şifre Tekrar" [ngClass]="{'is-invalid': submitted && component.paswordConfirm.errors}">
         <small *ngIf="submitted && frm.hasError('notSame')">Lütfen şifreyi doğrulayınız.</small>
       </div>
       <br />
@@ -49,4 +88,4 @@
 
   </div>
   <div class="col-md-3"></div>
-</div>
+</div> -->
