--- a/ECommerceClient/src/app/ui/components/login/login.component.html
+++ b/ECommerceClient/src/app/ui/components/login/login.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <asl-google-signin-button></asl-google-signin-button>
-
+    <img src="../../../../assets/facebook-icon-48.png" style="width:30px;height:30px;cursor: pointer;" (click)="facebookLogin()">
     <button style="margin-top:5px;" type="submit" class="btn btn-primary" (click)="login(txtUsernameOrEmail.value, txtPassword.value)">Giriş Yap</button>
 
   </div>
