Developed the component and service of the basket

--- a/ECommerceClient/src/app/ui/components/products/list/list.component.html
+++ b/ECommerceClient/src/app/ui/components/products/list/list.component.html
@@ -7,7 +7,7 @@
     <div class="card-body">
       <h5 class="card-title">{{product.name}}</h5>
       <p class="card-text">Price: {{ product.price | currency:"$"}} <br> Stock: {{product.stock}}</p>
-      <a href="#" class="btn btn-primary">Add Basket</a>
+      <a class="btn btn-primary" (click)="addToBasket(product)">Add Basket</a>
     </div>
   </div>
 </div>
