--- a/ECommerceClient/src/app/app.component.html
+++ b/ECommerceClient/src/app/app.component.html
@@ -1,35 +1,41 @@
 <div class="row">
   <div class="col-md-2"></div>
-  <div class="col-md-8"><nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" routerLink="">E-Commerce</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="products">Products</a>
-          </li>
-          <li class="nav-item">
+  <div class="col-md-8">
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" routerLink="">E-Commerce</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" routerLink="">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" routerLink="products">Products</a>
+            </li>
+            <!-- <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="baskets">Baskets</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="register" *ngIf="!authService.isAuthenticated">Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="login" *ngIf="!authService.isAuthenticated">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" style="color:red; cursor:pointer;" (click)="signOut()" *ngIf="authService.isAuthenticated">Exit</a>
-          </li>
-          <li>
-            <a routerLink="admin" class="btn btn-outline-success" type="submit" *ngIf="authService.isAuthenticated">Admin Panel</a>
-          </li>
-          <!-- <li class="nav-item dropdown">
+          </li> -->
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" routerLink="register"
+                *ngIf="!authService.isAuthenticated">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" routerLink="login"
+                *ngIf="!authService.isAuthenticated">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" style="color:red; cursor:pointer;" (click)="signOut()"
+                *ngIf="authService.isAuthenticated">Exit</a>
+            </li>
+            <li>
+              <a routerLink="admin" class="btn btn-outline-success" type="submit"
+                *ngIf="authService.isAuthenticated">Admin Panel</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
             </a>
@@ -44,14 +50,20 @@
             <a class="nav-link disabled">Disabled</a>
           </li> -->
 
-        </ul>
-        <!-- <form class="d-flex" role="search">
+          </ul>
+          <!-- <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form> -->
+          <div class="d-flex">
+            <button class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#exampleModal" type="submit">
+              Basket
+            </button>
+          </div>
+        </div>
       </div>
-    </div>
-  </nav></div>
+    </nav>
+  </div>
   <div class="col-md-2"></div>
 </div>
 
@@ -67,3 +79,5 @@
 <ngx-spinner size="default" name="s1" type="ball-atom"></ngx-spinner>
 <ngx-spinner size="default" name="s2" type="ball-scale-multiple.css"></ngx-spinner>
 <ngx-spinner size="default" name="s3" type="ball-spin-clockwise-fade-rotating"></ngx-spinner>
+
+<app-baskets></app-baskets>
