--- a/ECommerceClient/src/app/app.component.html
+++ b/ECommerceClient/src/app/app.component.html
@@ -56,7 +56,8 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form> -->
           <div class="d-flex">
-            <button class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#exampleModal" type="submit">
+            <button class="btn btn-outline-success" (click)="loadComponent()" data-bs-toggle="modal"
+              data-bs-target="#exampleModal" type="submit">
               Basket
             </button>
           </div>
@@ -80,4 +81,10 @@
 <ngx-spinner size="default" name="s2" type="ball-scale-multiple.css"></ngx-spinner>
 <ngx-spinner size="default" name="s3" type="ball-spin-clockwise-fade-rotating"></ngx-spinner>
 
-<app-baskets></app-baskets>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <!-- <app-baskets></app-baskets> -->
+    <ng-template appDynamicLoadComponent></ng-template>
+  </div>
+</div>
