--- a/ECommerceClient/src/app/ui/components/baskets/baskets.component.html
+++ b/ECommerceClient/src/app/ui/components/baskets/baskets.component.html
@@ -1,47 +1,42 @@
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Basket</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
+<div class="modal-content">
+  <div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLabel">Basket</h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
 
 
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Name</th>
-              <th scope="col">Price</th>
-              <th scope="col">Quantity</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="{{basketItem.basketItemId}}" *ngFor="let basketItem of basketItems; let i = index">
-              <th scope="row">{{i + 1}}</th>
-              <td>{{basketItem.name}}</td>
-              <td>
-                <input type="number" [value]="basketItem.quantity" data-id="{{basketItem.basketItemId}}" (change)="changeQuantity($event)" style="width: 60px;">
-              </td>
-              <td>
-                <button type="button" class="btn btn-danger" (click)="removeBasketItem(basketItem.basketItemId)">X</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Name</th>
+          <th scope="col">Price</th>
+          <th scope="col">Quantity</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="{{basketItem.basketItemId}}" *ngFor="let basketItem of basketItems; let i = index">
+          <th scope="row">{{i + 1}}</th>
+          <td>{{basketItem.name}}</td>
+          <td>
+            <input type="number" [value]="basketItem.quantity" data-id="{{basketItem.basketItemId}}"
+              (change)="changeQuantity($event)" style="width: 60px;">
+          </td>
+          <td>
+            <button type="button" class="btn btn-danger" (click)="removeBasketItem(basketItem.basketItemId)">X</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
 
 
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">Save changes</button>
-      </div>
-    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+    <button type="button" class="btn btn-success">Save changes</button>
   </div>
 </div>
