Updated signalR, dialogs of basket and shopping

--- a/ECommerceClient/src/app/app.component.html
+++ b/ECommerceClient/src/app/app.component.html
@@ -57,7 +57,7 @@
         </form> -->
           <div class="d-flex">
             <button class="btn btn-outline-success" (click)="loadComponent()" data-bs-toggle="modal"
-              data-bs-target="#exampleModal" type="submit">
+              data-bs-target="#basketModal" type="submit">
               Basket
             </button>
           </div>
@@ -81,7 +81,7 @@
 <ngx-spinner size="default" name="s2" type="ball-scale-multiple.css"></ngx-spinner>
 <ngx-spinner size="default" name="s3" type="ball-spin-clockwise-fade-rotating"></ngx-spinner>
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="basketModal" tabindex="-1" role="dialog "
   aria-hidden="true">
   <div class="modal-dialog modal-xl">
     <!-- <app-baskets></app-baskets> -->
