--- a/ECommerceClient/src/app/admin/components/orders/list/list.component.html
+++ b/ECommerceClient/src/app/admin/components/orders/list/list.component.html
@@ -21,6 +21,13 @@
       <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="viewdetail">
+      <th mat-header-cell *matHeaderCellDef width="30"> </th>
+      <td mat-cell *matCellDef="let element">
+        <img style="cursor: pointer;" (click)="showDetail(element.id)" src="../../../../../assets/detail.png" width="25" height="25" />
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef width="30">  </th>
       <td mat-cell *matCellDef="let element"
