--- a/ECommerceClient/src/app/dialogs/order-detail-dialog/order-detail-dialog.component.html
+++ b/ECommerceClient/src/app/dialogs/order-detail-dialog/order-detail-dialog.component.html
@@ -59,5 +59,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Complete</button>
+  <button mat-button [mat-dialog-close]="data" cdkFocusInitial *ngIf="!singleOrder.completed" (click)="completeOrder()">Complete</button>
 </mat-dialog-actions>
