--- a/ECommerceClient/src/app/admin/layout/components/sidebar/sidebar.component.html
+++ b/ECommerceClient/src/app/admin/layout/components/sidebar/sidebar.component.html
@@ -5,5 +5,6 @@
   <a mat-list-item role="listitem" routerLink="products">Products</a>
   <a mat-list-item role="listitem" routerLink="authorize-menu">Authorize Menu</a>
   <a mat-list-item role="listitem" routerLink="roles">Roles</a>
+  <a mat-list-item role="listitem" routerLink="users">Users</a>
   <a mat-list-item role="listitem" routerLink="">Back</a>
 </mat-list>
