Developed Role Permission Filter

--- a/ECommerceClient/src/app/dialogs/authorize-menu-dialog/authorize-menu-dialog.component.html
+++ b/ECommerceClient/src/app/dialogs/authorize-menu-dialog/authorize-menu-dialog.component.html
@@ -1,5 +1,5 @@
-<h1 mat-dialog-title matBadge="{{rolesComponent.selectedOptions.selected.length}}/{{roles.totalCount}}" matBadgeOverlap="false">
-  {{data.name}} | Role Assignment
+<h1 mat-dialog-title matBadge="{{rolesComponent?.selectedOptions?.selected?.length}}/{{roles?.totalCount}}" matBadgeOverlap="false">
+  {{data?.name}} | Role Assignment
 </h1>
 <div mat-dialog-content>
   <p>You can add the roles below </p>
